Fixing HTML validation errors, removing rel="" attributes, adding alt="" tags.

--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -94,9 +94,9 @@ html(lang="en" class="no-js")
         script src='http://www.e-junkie.com/ecom/box.js' 
 
     - if page.lib?("uservoice")
-      script async="true" defer="defer" src="//widget.uservoice.com/9Io2T4xq0vy769kPEKmJ0w.js"
+      script async="async" defer="defer" src="//widget.uservoice.com/9Io2T4xq0vy769kPEKmJ0w.js"
 
     - if page.lib?("plusone")
-      script async="true" defer="defer" src="https://apis.google.com/js/plusone.js"
+      script async="async" defer="defer" src="https://apis.google.com/js/plusone.js"
 
 
