--- a/content/index.slim
+++ b/content/index.slim
@@ -103,8 +103,8 @@ hr
     .row
       .span3
         .picture
-          a href="http://collective.li" rel="image" title="collective.li"
-            img src="/img/logos/Banner270.jpg"
+          a href="http://collective.li" title="collective.li"
+            img src="/img/logos/Banner270.jpg" alt="collective.li"
             .image-overlay-zoom
         .item-description
           h4: a(href="http://collective.li") collective.li
@@ -112,8 +112,8 @@ hr
             | Collective.li: Share your life magazine.
       .span3
         .picture
-           a href="http://london.msn.co.uk/" rel="image" title="MSN London Olympic Games 2012"
-            img src="/img/logos/olympics-270.jpg"
+           a href="http://london.msn.co.uk/" title="MSN London Olympic Games 2012"
+            img src="/img/logos/olympics-270.jpg" alt="MSN London Olympics 2012"
             .image-overlay-zoom
         .item-description
           h4: a(href="http://london.msn.co.uk/") MSN London Olympic Games 2012 
@@ -122,8 +122,8 @@ hr
           a href="http://www.netmagazine.com/features/how-we-built-msn-uks-responsive-olympics-site" How the site was built
       .span3
         .picture
-          a href="http://www.bilbasen.dk" rel="image" title="example goes here"
-            img src="/img/logos/ebay_dk_270.jpg"
+          a href="http://www.bilbasen.dk" title="example goes here"
+            img src="/img/logos/ebay_dk_270.jpg" alt="eBay denmark"
             .image-overlay-zoom
         .item-description
           h4
@@ -244,18 +244,18 @@ hr
 h3 Who uses ImageResizer?
 .clients-carousel
   ul.slides.clients
-    li: img src="/img/logos/collectiveli_256.png"
-    li: img src="/img/logos/logo_mindrevolution_black.png"
-    li: img src="http://s.stpost.com/img/sierra-logo.gif"
-    li: img src="http://www.eksponent.com/Content/images/logo.png"
-    li: img src="/img/logos/pmg-austin.png"
-    li: img src="/img/logos/repzio-logo-144.gif"
-    li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Microsoft.svg/200px-Microsoft.svg.png"
-    li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/4/48/EBay_logo.png/320px-EBay_logo.png"
-    li: img src="/img/logos/publishgreen.png"
-    li: img src="/img/logos/flavorplate.png"
-    li: img src="/img/logos/MizuniLogoR_933x216.png"
-    li: img src="/img/logos/SoulRebornLogo.png"
+    li: img src="/img/logos/collectiveli_256.png" alt="collective.li"
+    li: img src="/img/logos/logo_mindrevolution_black.png"  alt="mindrevolution"
+    li: img src="http://s.stpost.com/img/sierra-logo.gif" alt="Sierra Trading Post"
+    li: img src="http://www.eksponent.com/Content/images/logo.png"  alt="Eksponent"
+    li: img src="/img/logos/pmg-austin.png" alt="PMG Austin"
+    li: img src="/img/logos/repzio-logo-144.gif"  alt="Repzio"
+    li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Microsoft.svg/200px-Microsoft.svg.png" alt="Microsoft"
+    li: img src="http://upload.wikimedia.org/wikipedia/commons/thumb/4/48/EBay_logo.png/320px-EBay_logo.png" alt="eBay"
+    li: img src="/img/logos/publishgreen.png" alt="Publish Green"
+    li: img src="/img/logos/flavorplate.png" alt="flavor plate"
+    li: img src="/img/logos/MizuniLogoR_933x216.png" alt="Mizuni"
+    li: img src="/img/logos/SoulRebornLogo.png" alt="Soul Reborn"
 hr
 
 .row
