Fixing final URI validation error (hopefully!)

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -61,7 +61,7 @@ Layout: false
 
         #social-r.tooltips
           a.googleplus href="https://plusone.google.com/_/+1/confirm?url=http://imageresizing.net/" target="_blank"  Google+
-          a.twitter href="http://twitter.com/share?url=http://imageresizing.net&amp;text=Simple image processing from the URL" target="_blank" Twitter
+          a.twitter href="http://twitter.com/share?url=http://imageresizing.net&amp;text=Simple+image+processing+from+the+URL" target="_blank" Twitter
           a.facebook href="http://www.facebook.com/sharer.php?u=http://imageresizing.net/" target="_blank" Facebook
           a.linkedin href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http%3A%2F%2Fimageresizing.net%2F&amp;title=Process%20images%20via%20the%20URL%20-%20Simple%2C%20secure%20API" target="_blank" LinkedIn
           a.stumbleupon href="http://www.stumbleupon.com/submit?url=http://imageresizing.net&amp;title=RESTful+Image+Processing" target="_blank" StumbleUpon
