Fixed validation errors on /support, made footer link to in-page section for bug bounty

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -74,7 +74,7 @@ Layout: false
 
           For support requests, [visit our support page, which explains how to generate a diagnostics page and get free support on StackOverflow](/support). 
 
-          We provide free support for all bug-related requests, and [**offer a $5-$50 reward** for discovering a bug (details)](/support). 
+          We provide free support for all bug-related requests, and [**offer a $5-$50 reward** for discovering a bug (details)](/support#bugbounty). 
 
           *Please* reserve on-page comments for questions and clarifications *related to to the current page*; in most cases, it's *not* the appropriate place to ask for support.
 
