Added link to /docs/contribute in footer, next to github.com/imazen

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -43,7 +43,10 @@ Layout: false
       .span4
         h3 We're on GitHub
         ul.star_list
-          li: a href="https://github.com/imazen/" github.com/ Imazen
+          li
+            a href="https://github.com/imazen/" github.com/ Imazen
+            |  -  
+            a href="/docs/contribute" how to access imazen/resizer
           li: a href="https://github.com/nathanaeljones/" github.com/ Nathanael Jones
 
 
@@ -85,4 +88,4 @@ Layout: false
   .container
     .span12
       p
-        | Copyright &copy; 2013, <a href="http://imazen.io">Imazen</a> and <a href="http://nathanaeljones.com">Nathanael Jones</a>
+        | Copyright &copy; 2013 <a href="http://imazen.io">Imazen</a> and <a href="http://nathanaeljones.com">Nathanael Jones</a>
