Fixed several broken links

--- a/content/index.slim
+++ b/content/index.slim
@@ -65,7 +65,6 @@ hr
             | V#{latest_release.meta.shortversion} includes 
             = latest_release.meta_summary
             |  (see release notes and download page).
-
   .span2
     h3 Install
     ul.arrow_list
@@ -93,9 +92,6 @@ hr
             = p.meta.short_heading || p.heading
     a href="/blog" 
       | more...
-
-
-
 .row
   .span9
     .title
@@ -103,11 +99,11 @@ hr
     .row
       .span3
         .picture
-          a href="http://collective.li" title="collective.li"
+          a href="http://www.collective.li" title="collective.li"
             img src="/img/logos/Banner270.jpg" alt="collective.li"
             .image-overlay-zoom
         .item-description
-          h4: a(href="http://collective.li") collective.li
+          h4: a(href="http://www.collective.li") collective.li
           p 
             | Collective.li: Share your life magazine.
       .span3
@@ -166,7 +162,7 @@ hr
 .row
   .icons-box-vert-container
     .span4
-      a href="/docs/compatible"
+      a href="/docs/workswith"
         .icons-box-vert
           i.ico-white.circle-color-full.ico-link
           .icons-box-vert-info
@@ -176,7 +172,7 @@ hr
               
           .clear
     .span4
-      a href="/docs/single-source"
+      a href="/docs/agile"
         .icons-box-vert
           i.ico-white.circle-color-full.ico-roundabout
           .icons-box-vert-info
@@ -266,7 +262,7 @@ hr
         .icons-box-vert-info
           h3 Helpful community
           markdown:
-            ImageResizer boasts a sizeable collection of community plugins, and there are always people around to give you a hand at [StackOverflow:ImageResizer](http://stackoverflow.com/questions/tagged/imageresizer) when the [self-diagnostics](/plugins/diagnostics) can't help.
+            ImageResizer [boasts a sizeable collection of community plugins, and there are always people around](/docs/community) to give you a hand at [StackOverflow:ImageResizer](http://stackoverflow.com/questions/tagged/imageresizer) when the [self-diagnostics](/plugins/diagnostics) can't help.
         .clear
     .span4
       .icons-box-vert
