Added install/learn links

--- a/content/index.slim
+++ b/content/index.slim
@@ -68,8 +68,8 @@ hr
   .span2
     h3 Install
     ul.arrow_list
-      li: a href="/docs/install/aspnet" Installation Guide for ASP.NET
-      li: a href="/docs/nuget" Install with NuGet
+      li: a href="/docs/install" Installation Guide
+      li: a href="/docs/workswith" Compatibility Guide
       li: a href="/docs/troubleshoot" Troubleshooting guide
 
     a href="/docs" 
@@ -78,7 +78,7 @@ hr
     h3 Learn
     ul.arrow_list
       li: a href="/docs/basics" Basic commands
-
+      li: a href="/docs" Documentation 
       li: a href="/docs/troubleshoot" Troubleshooting guide
 
     a href="/docs" 
