Increased hover rect density for home page sections

--- a/content/css/less/smart.less
+++ b/content/css/less/smart.less
@@ -701,7 +701,7 @@ html[xmlns] .slides {display: block;}
 
 .icons-box-vert:hover {
   background: #fcfcfc;
-  border: 1px solid #f6f6f6;
+  border: 1px solid #eaeaea;
 }
 
 .icons-box-vert-info {
