Added /docs/install/generic partial. Pages can now call "Append: /docs/install/generic" in metadata to include it.

--- a/content/_layout/page.slim
+++ b/content/_layout/page.slim
@@ -17,6 +17,9 @@ Layout: layout
 
     == yield
 
+    - if page.meta.append
+      == partial page.meta.append.to_sym
+
     - if page.lib?('plusone')
       .g-plusone
     == partial :comments
