Fixed broken link, improved wording

--- a/content/docs/install/sidebar.slim
+++ b/content/docs/install/sidebar.slim
@@ -4,7 +4,7 @@ Flags: hidden
 h2 Installation Notes
 ul.arrow_list
   li: a href="/docs/install" Installation Guide
-  li: a href="/docs/cloude" Cloud Architecture Guide
+  li: a href="/docs/cloud" Cloud Architecture Guide
   li: a href="/docs/install/administrators" IIS Administrator Installation Guide
   li: a href="/docs/install/aspnet" ASP.NET Installation Guide
   li: a href="/docs/install/web-config" Web.config modification guide
