--- a/content/_layout/header.slim
+++ b/content/_layout/header.slim
@@ -11,7 +11,7 @@ header
           span class="icon-bar"
           span class="icon-bar"
         a class="brand" href="/"
-          img src="/img/ir-logos/imageresizer_400_00aec4.png" width="200" alt="Image Resizer"
+          img src="/img/ir-logos/imageresizer_400_00aec4.png" style="width:200px" alt="Image Resizer"
 
         .nav-collapse.collapse
           ul.nav
