Added intro description; bounded slider

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -54,4 +54,15 @@ div.site-subheader{
 .gsc-control-cse {background-color:inherit; border:0;}
 
 
+.home-slider{
+  margin-top:24px;
+}
 
+.whatisir p{
+  font-size:140%;
+  margin-top:7px;
+}
+.whatisir{
+  margin-top:14px;
+  margin-bottom:14px;
+}
