--- a/content/css/less/parallax-slider.less
+++ b/content/css/less/parallax-slider.less
@@ -722,8 +722,8 @@
 @media only screen and (min-width: 1200px)  {
 
   .da-slide{
-    width:1404px;
-    margin-left:-702px;
+    width:1200;
+    margin-left:-600px;
     left: 50%;
     height:100%;
   }
@@ -734,8 +734,8 @@
 @media only screen and (min-width: 960px) and (max-width: 1119px) {
 
   .da-slide{
-    width:1152px;
-    margin-left:-576px;
+    width:960px;
+    margin-left:-480px;
     left: 50%;
     height:100%;
   }
