--- a/content/index.slim
+++ b/content/index.slim
@@ -7,38 +7,46 @@ Layout: layout
 h1 RESTful image processing
 
 == content_for :banner do
-  .slider-wrapper
-    #da-slider.da-slider
 
-      .da-slide.textual
-        h2 Blissfully compatible
-        p
-          | Drop-in compatible with your existing website, CMS, servers, and dev tools. Accessible, stack-agnostic API.
-      .da-slide.textual
-        h2 Gratifying agility
-        p  
-          | Tweak size, cropping, and encoding in-page. Escape the endless edit-export-upload cycle! 
-          |  Conveniently mobile and retina-friendly.
-      .da-slide.textual
-        h2 Comprehensive and capable
-        p
-          | ImageResizer offers facial detection, red-eye correction, RAW file development, seam carving, and object removal. 
-          | World-class resizing is just the tip of the iceberg. 
-  
-      .da-slide.textual
-        h2 Conveniently intuitive
-        p
-          | No reference manual needed; add commands to the end of your image URL. Order and casing doesn't matter, and every combination of commands 'just works'. 
-      .da-slide.textual
-        h2 Extreme scalability
-        p
-          | A single server running ImageResizer Performance Edition can efficiently cache and serve up to a million unique images. Many of our clients use it with up to 10 million, but at that point we suggest a CDN, Varnish, or nginx cache.
+  .container
+    .slider-wrapper.home-slider
+      #da-slider.da-slider
 
-      .da-slide.textual
-        h2 Enlighteningly open
-        p Everything we offer includes source code - and you're welcome to edit it. We reward pull requests and encourage community plugin development.
+        .da-slide.textual
+          h2 Blissfully compatible
+          p
+            | Drop-in compatible with your existing website, CMS, servers, and dev tools. Accessible, stack-agnostic API.
+        .da-slide.textual
+          h2 Gratifying agility
+          p  
+            | Tweak size, cropping, and encoding in-page. Escape the endless edit-export-upload cycle! 
+            |  Conveniently mobile and retina-friendly.
+        .da-slide.textual
+          h2 Comprehensive and capable
+          p
+            | ImageResizer offers facial detection, red-eye correction, RAW file development, seam carving, and object removal. 
+            | World-class resizing is just the tip of the iceberg. 
+    
+        .da-slide.textual
+          h2 Conveniently intuitive
+          p
+            | No reference manual needed; add commands to the end of your image URL. Order and casing doesn't matter, and every combination of commands 'just works'. 
+        .da-slide.textual
+          h2 Extreme scalability
+          p
+            | A single server running ImageResizer Performance Edition can efficiently cache and serve up to a million unique images. Many of our clients use it with up to 10 million, but at that point we suggest a CDN, Varnish, or nginx cache.
 
-hr
+        .da-slide.textual
+          h2 Enlighteningly open
+          p Everything we offer includes source code - and you're welcome to edit it. We reward pull requests and encourage community plugin development.
+
+.whatisir
+  h1 Dynamically create images that inspire and impress
+  p
+    | ImageResizer provides a comprehensive set of photography tools, from powerfully simple one-command adjustments like white balance correction and noise remval to cutting-edge advanced controls like red-eye correction, object removal, and seam carving. Have your server deliver final images to the browser in milliseconds.
+
+
+
 
 .row
   .span5
@@ -75,7 +83,7 @@ hr
     a href="/docs" 
       | more...
   .span2
-    h3 Learn
+    h3 Tutorials
     ul.arrow_list
       li: a href="/docs/basics" Basic commands
       li: a href="/docs" Documentation 
