--- a/content/plugins/index.slim
+++ b/content/plugins/index.slim
@@ -58,4 +58,4 @@ h1 Plugin Index
 
 .well
   markdown: 
-    **Don't see the plugin or feature you need?** I offer 40% off my standard rate for [custom plugin development](/plugins/custom).
+    **Don't see the plugin or feature you need?** Imazen offers [custom plugin development](/plugins/custom).
