Added "Edit Page Button" to website

--- a/content/_layout/header.slim
+++ b/content/_layout/header.slim
@@ -28,5 +28,8 @@ header
                 a href="/support" Support
               li
                 a href="/licenses" Licenses
+              - if config.github.showeditbutton
+                li: a href=(config.github.editurl + index.make_almost_virtual(page.filename, false)) Edit page
+
 
 
