--- a/content/index.slim
+++ b/content/index.slim
@@ -43,7 +43,7 @@ h1 RESTful image processing
 .whatisir
   h1 Dynamically create images that inspire and impress
   p
-    | ImageResizer provides a comprehensive set of photography tools, from powerfully simple one-command adjustments like white balance correction and noise remval to cutting-edge advanced controls like red-eye correction, object removal, and seam carving. Have your server deliver final images to the browser in milliseconds.
+    | ImageResizer provides a comprehensive set of photography tools, from powerfully simple one-command adjustments like white balance correction and noise removal to cutting-edge advanced controls like red-eye correction, object removal, and seam carving. Have your server deliver final images to the browser in milliseconds.
 
 
 
