Added link to contributor agreement and the redist page

--- a/content/docs/community.slim
+++ b/content/docs/community.slim
@@ -45,7 +45,7 @@ h1 ImageResizer Community
 
     markdown:
 
-      **All Imazen software is developed on Github, with community collaboration**. **E-mail your GitHub username to `support@imageresizing.net`, and we'll give you access** to the [github.com/imazen/resizer repository](http://github.com/imazen/resizer). We've never denied a request for access, and we happily accept and test any pull requests we receive.  To see a [list of other libraries Imazen has created, go to imazen.io](http://www.imazen.io/software).
+      **All Imazen software is developed on Github, with community collaboration**. **E-mail your GitHub username to `support@imageresizing.net`, and we'll give you access** to the [github.com/imazen/resizer repository](http://github.com/imazen/resizer). We've never denied a request for access, and we happily accept and test any [correctly licensed](/licenses/contribute) pull requests we receive.  To see a [list of other libraries Imazen has created, go to imazen.io](http://www.imazen.io/software).
 
       If you're new to Git, [we have instructions for installing and connecting to GitHub](/docs/git).
 
@@ -59,6 +59,7 @@ h1 ImageResizer Community
 
       We're always quick to provide assistance to developers creating community plugins, so feel free to reach out and ask questions!
 
+      **Also, check out [the Redistribution and CMS Integration Guide](/docs/redist) if you're interested in redistributing ImageResizer with your product.**
 
   .span4
     .title: h2 Discuss Ideas
