--- a/content/docs/install/sidebar.slim
+++ b/content/docs/install/sidebar.slim
@@ -20,6 +20,7 @@ ul.arrow_list
   li: a href="/docs/install/standalone" Standalone / Without ASP.NET Notes
 
   li: a href="/docs/troubleshoot" Troubleshooting Guide
+  li: a href="/docs/redist" Redistribution and CMS Integration Guide
 
 h2 CMS Notes
 ul.star_list
