Moved system requirements page from /docs to /docs/workswith

--- a/content/docs/workswith/index.slim
+++ b/content/docs/workswith/index.slim
@@ -134,6 +134,6 @@ h1 Blissfully compatible with practically everything
       li Mono 2.10.5 or higher
     p 
       | Many plugins require .NET 3.5 or higher to operate 
-      a href="/docs/requirements" (more details).
+      a href="/docs/workswith/requirements" (more details).
 
 
