--- a/content/docs/redist.slim
+++ b/content/docs/redist.slim
@@ -22,12 +22,11 @@ h1 Redistribution and CMS Integration guide
     h2 What about caching? 
 
     markdown:
-      Disk caching is very important; it's also a conundrum, as we can't offer the DiskCache plugin for free without eliminating our revenue stream. 
+      TinyCache is a lighter version of DiskCache, suitable for small websites and projects which aren't photo heavy.
 
+      TinyCache offers a fixed-size (30MB), disk-persisted memory cache. The average size of a resized image is 30KB, so TinyCache can generally store the 1,000 most popular image variations. We reccomend that websites with over a few hundred images upgrade to DiskCache, which is designed to cache millions of images.
 
-      TinyCache is an experimental plugin we're testing that offers a fixed-size, disk-persisted memory cache. TinyCache is not yet a part of ImageResizer Essential Edition, but we're looking for partners willing to experiment with it. 
-
-      TinyCache is limited to 30MB, which is sufficient for many small and medium-size websites that aren't particularly photo-heavy. The average size of a resized image is 30KB, so TinyCache generally stores the 1,000 most popular image variations.
+      TinyCache is not yet a part of ImageResizer Essential Edition, but we're looking for partners willing to experiment with it. 
 
   .span3
     h2 Play nice with others
