--- a/content/index.slim
+++ b/content/index.slim
@@ -38,7 +38,7 @@ h1 RESTful image processing
 
         .da-slide.textual
           h2 Enlighteningly open
-          p Everything we offer includes source code - and you're welcome to edit it. We reward pull requests and encourage community plugin development.
+          p Everything we offer includes source code, and you're welcome to edit it. We reward pull requests and encourage community plugin development.
 
 .whatisir
   h1 Dynamically create images that inspire and impress
