--- a/content/index.slim
+++ b/content/index.slim
@@ -34,7 +34,7 @@ h1 RESTful image processing
         .da-slide.textual
           h2 Extreme scalability
           p
-            | A single server running ImageResizer Performance Edition can efficiently cache and serve up to a million unique images. Many of our clients use it with up to 10 million, but at that point we suggest a CDN, Varnish, or nginx cache.
+            | A single server running ImageResizer Performance Edition can efficiently cache and serve up to a million unique images. Many of our clients use it with up to 10 million, but at that point we suggest a CDN, Varnish, or Nginx cache.
 
         .da-slide.textual
           h2 Enlighteningly open
