--- a/content/index.slim
+++ b/content/index.slim
@@ -229,7 +229,7 @@ h1 RESTful image processing
             markdown:
               Upgrade to the Performance Edition and scale to millions of images and users. 
 
-              Beyond that? We support Amazon CloudFront and Microsoft CDN, and you can use S3 or Azure for centralized image storage.
+              We also support Amazon CloudFront and Microsoft CDN, and you can use S3 or Azure for centralized image storage.
 
           .clear
     .span4
