--- a/content/index.slim
+++ b/content/index.slim
@@ -289,7 +289,7 @@ hr
           markdown:
             Core functionality is free and open source under the [Freedom license](/licenses/freedom). 
             
-            Everything we offer includes source code and permits modification; **we reward pull requests**.
+            Everything we offer includes source code and permits modification. **We reward pull requests**.
           
         .clear
   .clear
