--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -36,7 +36,7 @@ h1 Support
 	.span6
 		h2 Priority Support
 		markdown:
-			Priority email, phone and TeamViewer support costs $135/incident. A [30-minute Q&A session costs $70](/support/consult), but (unlike) a support incident, is time-limited and only reccomended for consulting/introduction purposes.
+			Priority email, phone and TeamViewer support costs $135/incident. A [30-minute Q&A session costs $70](/support/consult), but (unlike) a support incident, is time-limited and only reccommended for consulting/introduction purposes.
 
 			If you work for a business, please [look at the support contract options](/support/contracts) - they can provide significant savings. 
 
