--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -82,7 +82,7 @@ hr
 
 			We will also PayPal you between $5 and $50 for each bug you report - if you're the first to report it, and if it's in the latest version of one of our ImageResizer.* assemblies.
 
-			The average bug reward is $15; only security holes and memory leaks are elgibile for the $50 level. 
+			The average bug reward is $15; only security holes and memory leaks are eligibile for the $50 level. 
 
 			We welcome feature requests, and everyone may [sumbit new ideas or vote for existing ones at the uservoice site](http://resizer.uservoice.com/forums/108373-image-resizer-v3).
 	.span6
